Bugfix: spacing
- correct spacing utility classes:
  - horizontal = left, right
  - vertical = top, bottom
- Update version to 0.5.1 from 0.5.0
- Add spacing and text utility documentation
- Remove font-size declaration from <pre>
* Update VS Code settings to show column rulers

--- a/src/css/scss/_base.scss
+++ b/src/css/scss/_base.scss
@@ -134,7 +134,6 @@ code {
   color: $pink;
   display: inline-block;
   font-family: monospace;
-  font-size: 0.95rem;
   padding: 0 2px;
   word-break: break-word;
 }
@@ -147,6 +146,5 @@ pre {
 
   code {
       color: $grey-800;
-      font-size: 0.875rem;
   }
 }
